# deno_embed

./: .gitignore  Cargo.toml  README.md  justfile
.github/scripts/: linux-amd64.bash  linux-arm64.bash  macos-amd64.bash  macos-arm64.bash  windows-amd64.ps1  windows-arm64.ps1
.github/scripts/utils/: install-protobuf.bash  install-rust.bash
.github/workflows/: release.yaml
crates/deno_embed/: Cargo.toml
crates/deno_embed/src/: lib.rs
crates/deno_embed_macos_arm64/: Cargo.toml  build.rs
crates/deno_embed_macos_arm64/src/: lib.rs
crates/deno_v8_snapshot/: Cargo.toml  README.md
crates/deno_v8_snapshot/src/: lib.rs
crates/deno_v8_snapshot_linux_amd64/: Cargo.toml  build.rs
crates/deno_v8_snapshot_linux_amd64/src/: lib.rs
crates/deno_v8_snapshot_linux_arm64/: Cargo.toml  build.rs
crates/deno_v8_snapshot_linux_arm64/src/: lib.rs
crates/deno_v8_snapshot_macos_amd64/: Cargo.toml  build.rs
crates/deno_v8_snapshot_macos_amd64/src/: lib.rs
crates/deno_v8_snapshot_macos_arm64/: Cargo.toml  build.rs
crates/deno_v8_snapshot_windows_amd64/: Cargo.toml
crates/deno_v8_snapshot_windows_amd64/src/: lib.rs
crates/deno_v8_snapshot_windows_arm64/: Cargo.toml
crates/deno_v8_snapshot_windows_arm64/src/: lib.rs
deno_snapshots/: Cargo.toml
deno_snapshots/.cargo/: config.toml  local-build.toml
deno_snapshots/cli/: Cargo.toml  build.rs  main.rs
src/: deno_current_thread.rs  entry.rs  lib.rs  run.rs
