[workspace]
resolver = "2"

members = [
  "./crates/deno_v8_snapshot",
  "./crates/deno_v8_snapshot_macos_arm64",
  "./crates/deno_v8_snapshot_macos_amd64",
  "./crates/deno_v8_snapshot_linux_arm64",
  "./crates/deno_v8_snapshot_linux_amd64",
  "./crates/deno_v8_snapshot_windows_amd64",
  "./crates/deno_v8_snapshot_windows_arm64",
]

[workspace.package]
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/deno"
