[workspace]
resolver = "2"

members = [
  "./cli",
  "./cli/napi/sym",
]

[workspace.package]
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/deno"

[workspace.dependencies]
napi_sym = { version = "=0.71.0", path = "./cli/napi/sym" }
proc-macro2 = "=1.0.76"
quote = "=1.0.35"
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
syn = { version = "=2.0.48", features = ["full", "extra-traits"] }
libz-sys = { version = "=1.1.12", default-features = false }
v8 = "=0.83.2"
deno_runtime = "=0.149.0"
deno_core = "=0.269.0"
lazy-regex = "=3.1.0"
zstd = "=0.12.4"
glibc_version = "0.1.2"
flate2 = { version = "1.0.26", features = ["default"] }
libc = "0.2.150"
winapi = "=0.3.9"
winres = "=0.1.12"
log = "=0.4.20"
once_cell = "1.19.0"