[package]
name = "deno_embed"
version = "2.0.6-next.0"
edition = "2021"
description = "A crate to make embedding Deno a little eaiser" 
license = "MIT"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
deno_embed_macos_arm64 = { path = "../deno_embed_macos_arm64", version = "2.0.6-next.0"}
