[package]
name = "deno_snapshots"
version = "1.41.2"
authors.workspace = true
default-run = "deno"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides the deno executable"

[[bin]]
name = "deno"
path = "main.rs"
doc = false

[features]
default = ["upgrade", "__vendored_zlib_ng"]
upgrade = []
__runtime_js_sources = ["deno_runtime/__runtime_js_sources"]
__vendored_zlib_ng = ["flate2/zlib-ng-compat", "libz-sys/zlib-ng"]

[build-dependencies]
deno_runtime = { version = "0.149.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
deno_core = { version = "0.269.0", features = ["include_js_files_for_snapshotting"] }
lazy-regex = "=3.1.0"
serde = "1.0.149"
serde_json = "1.0.85"
zstd = "=0.12.4"
glibc_version = "0.1.2"
flate2 = { version = "1.0.26", features = ["default"] }

[target.'cfg(windows)'.build-dependencies]
winapi.workspace = true
winres.workspace = true

[dependencies]
napi_sym.workspace = true
libz-sys.workspace = true
v8.workspace = true
deno_runtime = { workspace = true, features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
libc.workspace = true
deno_core.workspace = true
log.workspace = true
once_cell.workspace = true

[package.metadata.winres]
OriginalFilename = "deno.exe"
LegalCopyright = "© Deno contributors & Deno Land Inc. MIT licensed."
ProductName = "Deno"
FileDescription = "Deno: A secure runtime for JavaScript and TypeScript"
